# china_stock_lib

./: .gitignore  README.md  mysql.cfg  setup.cfg
sandbox/: main.py
sandbox/resource/: portfolio.csv  portfolio0124b.csv
src/helper/: Loader.py  WSDLoader.py  WSETLoader.py  WSSLoader.py  bond.py  configSQL.py  database.py  get_data.py  mysql.cfg  mysql_dbconnection.py  script.py  upload_github.py
src/helper_jinyi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
stock_data.egg-info/: PKG-INFO
test/: Markdown-notebooks-cheatsheet.ipynb  WSDLoader_test.py  WSETLoader_test.py  WSSLoader_test.py  backup_setup.py  mysql.cfg  setup_bakcup1.py  test_get_data.py  test_mysql_dbconnection.py  test_pivot_table.py
test/cfg/: config_test.py  logging.cfg  main.cfg  setup.cfg  test_config0.cfg  wind.cfg
test/resource/: 000016_SH.csv  sample.txt  test_d2m.csv  test_pivot_table.csv  test_wsd4.csv
