[metadata]
name = helper-jinyi
version = 1.0.7
author = jin yi
author_email = jinyiabc@gmail.com
description = WIND Api.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jinyiabc/china_stock_lib
project_urls =
    Bug Tracker = https://github.com/jinyiabc/china_stock_lib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
helper = *.cfg

[options.entry_points]
console_scripts =
    upload_github = helper.upload_github:upload_github_script
    wsd = helper.script:run_wsd
    wset = helper.script:run_wset
    wss = helper.script:run_wss